packages/uow-core/main/default/objects/UoWPluginSetting__mdt/UoWPluginSetting__mdt.object-meta.xml
<CustomObject>
    <description>Plugin configuration for Unit of Work. Links plugins to configurations with execution order and enabled flag. Plugins provide lifecycle hooks for custom behavior during transaction execution.</description>
    <label>UoW Plugin Setting</label>
    <pluralLabel>UoW Plugin Settings</pluralLabel>
</CustomObject>