packages/uow-core/main/default/objects/UoWPluginSetting__mdt/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>UoWConfiguration__mdt</referenceTo>
    <relationshipLabel>Plugin Settings</relationshipLabel>
    <relationshipName>PluginSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>