packages/uow-core/main/default/objects/UoWPluginSetting__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <label>Execution Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>