packages/uow-core/main/default/objects/UoWPluginSetting__mdt/fields/PluginClassName__c.field-meta.xml
<CustomField>
    <fullName>PluginClassName__c</fullName>
    <label>Plugin Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>