packages/uow-core/main/default/objects/UoWPluginSetting__mdt/fields/Settings__c.field-meta.xml
<CustomField>
    <fullName>Settings__c</fullName>
    <description>Plugin-specific settings in JSON format (key-value pairs). Example: {&quot;maxRetries&quot;: 3, &quot;backoffMs&quot;: 1000}</description>
    <label>Settings (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>