packages/uow-core/main/default/objects/UoWPluginSetting__mdt/listViews/AllPluginSettings.listView-meta.xml
<ListView>
    <fullName>AllPluginSettings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Configuration__c</columns>
    <columns>PluginClassName__c</columns>
    <columns>IsEnabled__c</columns>
    <columns>ExecutionOrder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>